15: catalog fix overflow for mobile

--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -288,7 +288,7 @@ body {
   height: 0.25em;
   border-radius: 0.25em;
   background-color: currentcolor;
-  transition: 0.3s;
+  transition: transform 0.3s, background-color 0.3s;
 }
 
 .burger__icon::before {
@@ -407,6 +407,14 @@ body {
   inset: calc(100% + 10px) 0 auto 0;
   background-color: hsl(0deg 0% 100%);
   transition: visibility 0.3s, opacity 0.3s;
+}
+
+@media (width < 768px) {
+  .catalog__popup {
+    overflow-y: auto;
+    max-height: calc(100vh - 100% - 10px);
+    max-height: calc(100dvh - 100% - 10px);
+  }
 }
 
 @media (768px <= width) {
